--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-.idea
+
+/node_modules
+/public/storage
+Homestead.yaml
+Homestead.json
+.env
+
+
+/.idea
+/vendor
+/node_modules
+.env
+.DS_Store
+Thumbs.db
+composer.phar
+.vagrant
